# AdGenPlugin

./: .gitattributes  .gitignore  .mcp.json  CLAUDE.md  README.md  index.html  migrations.py  pyproject.toml  server.py
.claude-plugin/: marketplace.json  plugin.json
docs/: ModemDarkDesignPrompt.xml  cdp-基本觀念.md  plugin-tutorial.md
frontend/: app.js  styles.css  theme.css
skills/generate-creatives/: SKILL.md
skills/generate-images/: SKILL.md
skills/serve/: SKILL.md
skills/setup/: SKILL.md
templates/: launch-chrome-cdp.bat  launch-chrome-cdp.sh
